syntax = "proto3";

// Package payment.v1 содержит API для работы с платежами
package payment.v1;

option go_package = "github.com/sborsh1kmusora/micro-shop/shared/pkg/proto/payment/v1;payment_v1";

// PaymentService предоставляет API для работы с платежами
service PaymentService {
  rpc PayOrder (PayOrderRequest) returns (PayOrderResponse);
}

// PayOrderRequest запрос на проведение оплаты
message PayOrderRequest {
  string order_uuid = 1;
  string user_uuid = 2;
  PaymentMethod payment_method = 3;
}

// PayOrderResponse ответ c uuid транзакции
message PayOrderResponse {
  string transaction_uuid = 1;
}

// PaymentMethod способ оплаты
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_CARD = 1;
  PAYMENT_METHOD_SBP = 2;
  PAYMENT_METHOD_CREDIT_CARD = 3;
  PAYMENT_METHOD_INVESTOR_MONEY = 4;
}